# onnx-asr

./: .gitignore  AUR_INSTRUCTIONS.md  PKGBUILD  README.md  build_preprocessors.py  hatch_build.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: bump_version.yml  check_label.yml  dev_build.yml  docs-publish.yml  python-package.yml  python-publish.yml  release.yml  test.yml
docs/: benchmarks.md  community-models.md  comparison.md  conversion.md  installation.md  license.md  reference.md  troubleshooting.md  usage.md
docs/javascripts/: gradio-fix.js
examples/: benchmark-en.ipynb  benchmark-ru.ipynb  performance benchmark.ipynb
notebooks/: benchmark-en.ipynb  benchmark-ru.ipynb
preprocessors/: __init__.py  build.py  fbanks.py  gigaam.py  kaldi.py  nemo.py  resample.py  stft.py  utils.py  whisper.py
src/onnx_asr/: __init__.py  adapters.py  asr.py  cli.py  loader.py  onnx.py  resolver.py  se.py  utils.py  vad.py
src/onnx_asr/_models/: __init__.py  gigaam.py  kaldi.py  nemo.py  whisper.py
src/onnx_asr/_preprocessors/: preprocessor.py
src/onnx_asr/models/: __init__.py  gigaam.py  kaldi.py  nemo.py  pyannote.py  silero.py  tone.py  wav2vec2.py  wespeaker.py  whisper.py
src/onnx_asr/preprocessors/: __init__.py  numpy_preprocessor.py  preprocessor.py  resampler.py
tests/: conftest.py  test_preprocessors.py
tests/onnx_asr/: test_cli.py  test_embedding.py  test_load_model.py  test_loader.py  test_manager.py  test_read_wav.py  test_recognize.py  test_resolver.py  test_vad.py
tests/preprocessors/: conftest.py  test_build.py  test_gigaam.py  test_gigaam_preprocessor.py  test_kaldi.py  test_kaldi_preprocessor.py  test_nemo.py  test_nemo_preprocessor.py  test_resample.py  test_resample_preprocessor.py  test_whisper.py  test_whisper_preprocessor.py
wrappers/: __init__.py  gigaam.py  nemo.py  sherpa.py  tone.py  whisper.py
